--- a/pfirst/src/app/app.component.html
+++ b/pfirst/src/app/app.component.html
@@ -3,6 +3,7 @@
   <app-global-navbar></app-global-navbar>
 </div>
 
+<notifier-container></notifier-container>
 <div id="main">
   <router-outlet></router-outlet>
 </div>
