recup sous forme d'objet avec firebase, il faudra tableau backend #5

--- a/pfirst/src/app/global-navbar/global-navbar.component.html
+++ b/pfirst/src/app/global-navbar/global-navbar.component.html
@@ -84,7 +84,7 @@
     [@notifAppearance]="stateNotif"
     *ngIf="this.hasNotif&&this.authService.isAuthenticated()"
     id="roundNotifIcon" (click)="openUserModal()">
-    {{this.notifs.length}}
+    {{this.notifList.length}}
   </div>
 <!--
 <div class="roundNotifIcon" [ngStyle]="quart">1</div>
