--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -3,8 +3,8 @@
 </div>
 
 <div class="jumbotron text-center">
-  <h1 class="display-4 text-white">"Un peu d'aide fait grand bien"</h1>
-  <h2 class="text-white">Dès maintenant, aide les personnes dans le besoin près de toi.</h2>
+  <h2 class="display-4 text-white">"Un peu d'aide fait grand bien"</h2>
+  <h3 class="text-white">Dès maintenant, aide les personnes dans le besoin près de toi.</h3>
   <table cellpadding="10px" align="center" id="buttons_action">
     <div id="buttons_services">
       <tr>
@@ -25,40 +25,57 @@
 </div>
 
 
-<!-- petites cartes résumé -->
-<div id="partie-inf">
-  <table align="center" cellpadding="100">
-    <div id="annonces">
-      <tr>
-        <td>
-          <app-annonce-courte
-            [image]="annonces[0]['image']"
-            [helped]="annonces[0]['user']"
-            [date]="annonces[0]['date']"
-            [service]="annonces[0]['name']">
-          </app-annonce-courte>
-        </td>
-        <td>
-          <app-annonce-courte
-            [image]="annonces[1]['image']"
-            [helped]="annonces[1]['user']"
-            [date]="annonces[1]['date']"
-            [service]="annonces[1]['service']">
-          </app-annonce-courte>
-        </td>
-        <td>
-              <app-annonce-courte
-                [image]="annonces[2]['image']"
-                [helped]="annonces[2]['user']"
-                [date]="annonces[2]['date']"
-                [service]="annonces[2]['service']">
-              </app-annonce-courte>
-        </td>
-      </tr>
+<!-- INEED C'EST QUOI ?-->
+<table align="center" cellpadding="80">
+  <tr>
+    <td valign="top">
+      <table>
+        <tr>
+          <td><img id="IneedCQ" src="../../assets/data/ACCUEIL/ineedCQ.png" alt=""></td>
+        </tr>
+        <tr>
+          <p id="textIn"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
+        </tr>
+      </table>
+    </td>
+    <td align="right">
+      <img id="pile" src="../../assets/data/ACCUEIL/pile.png" alt="">
+    </td>
+  </tr>
+</table>
 
-    </div>
+<!-- SEPARATE-->
+<table align="center">
+  <tr>
+    <img id="sep" src="../../assets/data/ACCUEIL/separ.png" alt="">
+  </tr>
+</table>
 
-  </table>
-</div>
+<!-- AIDER QUELQUUN ?-->
+<table align="center" cellpadding="80">
+  <tr>
+    <td align="right">
+      <img id="jetCourse" src="../../assets/data/ACCUEIL/jetonCourse.png" alt="">
+    </td>
+    <td valign="top">
+      <table>
+        <tr>
+          <td><img id="tuveux" src="../../assets/data/ACCUEIL/tuVeux.png" alt=""></td>
+        </tr>
+        <tr>
+          <p id="textTV"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
 
+
+<!-- AIDER QLQ
+<img id="tuveux" src="../../assets/data/ACCUEIL/tuVeux.png" alt="">
+<img id="jetCourse" src="../../assets/data/ACCUEIL/jetonCourse.png" alt="">
+<p id="aBesoin"><b>Gabriel a besoin de toi !</b></p>
+<p id="textTV"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
+
+<div id="space">.</div> -->
 
