--- a/pfirst/src/styles.css
+++ b/pfirst/src/styles.css
@@ -4,8 +4,8 @@
 body{
 /*  background-position-y: 522px ;
   background-repeat: no-repeat;
-  background-image: url("/assets/data/fond.png");*/
-  background-image: url("assets/data/inf.png");
+  background-image: url("/assets/data/fond.png");
+  background-image: url("assets/data/inf.png");*/
 
 
 }
