Mode dark dispo sur la page d'accueil, propose, profil, demande (mais voir avec tous les formulaires)

--- a/pfirst/src/app/demande/demande.component.html
+++ b/pfirst/src/app/demande/demande.component.html
@@ -1,3 +1,4 @@
+<div class="main-body">
 <div class="jumbotron text-center">
   <h1 class="display-4 text-white">Demander un service</h1>
   <h2 class="text-white">Vous avez besoin d'aide ? Faites le savoir et quelqu'un vous aidera.</h2>
@@ -67,5 +68,5 @@
 <div *ngIf="course" id="course">
   <app-new-courses></app-new-courses>
 </div>
-
+</div>
 
