--- a/pfirst/src/app/auth/auth.component.html
+++ b/pfirst/src/app/auth/auth.component.html
@@ -1,3 +1,4 @@
+<div class="main-body">
 <div *ngIf="field_non_valid" class="alert alert-dismissable alert-danger">
   L'adresse mail entrée est invalide.
 </div>
@@ -42,3 +43,4 @@
     </tr>
   </table>
 </form>
+</div>
