--- a/pfirst/src/app/propose/propose.component.html
+++ b/pfirst/src/app/propose/propose.component.html
@@ -1,3 +1,4 @@
+<div class="main-body">
 <h1 class ="text-center"> Les services qui sont actuellement proposes</h1>
 
 <div class="jumbotron text-center">
@@ -121,6 +122,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 
 
