--- a/pfirst/src/app/new-courses/new-courses.component.css
+++ b/pfirst/src/app/new-courses/new-courses.component.css
@@ -5,3 +5,7 @@
    background-color: #ededed;
    box-shadow: 1px 1px 5px #c0c0c0;
  }
+
+:host-context(.theme-dark) #jumb{
+  background-color: grey;
+}
