--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div id="jumb" class="jumbotron jumbotron-fluid">
 <div class="container">
   <h1 class="display-4" align="center">Faire les courses</h1>
   <table align="center">
@@ -27,7 +27,7 @@
               <input type="date" id="datejour" class="form-control" formControlName="datejour" >
               <label for="dateheure">Heure</label>
                 <input type="time" id="dateheure" class="form-control" formControlName="dateheure" >
-              
+
             </div>
 
           </div>
@@ -47,7 +47,7 @@
           <div class="jumbotron" id="formulaire">
             <div class="input-group mb-3">
               <label for="budget"><h2>Quel est le montant de votre budget ?</h2></label>
-              
+
               <span class="input-group-text">€</span>
               <input type="text" id="budget" class="form-control" formControlName="budget">
               <span class="input-group-text">,00</span>
