--- a/pfirst/src/app/demande/demande.component.css
+++ b/pfirst/src/app/demande/demande.component.css
@@ -13,7 +13,7 @@
   font-size: 14px;
   color: #333;
   box-sizing: border-box;
-  background-color: lightgrey;
+  background-color: whitesmoke;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
