--- a/pfirst/src/app/inscription/inscription.component.css
+++ b/pfirst/src/app/inscription/inscription.component.css
@@ -1,13 +1,27 @@
+:host-context(.theme-dark) body{
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 14px;
+  color: white;
+  box-sizing: border-box;
+  background-color: #2e2e2e;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+:host-context(.theme-light) body{
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 14px;
+  color: #333;
+  box-sizing: border-box;
+  background-color: whitesmoke;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 #logo{
   width: 150px;
 }
 
-.progress{
-  height: 20px;
-  width: 500px;
-  margin: 0 auto;
-
-}
 
 #info
 {
