--- a/pfirst/src/app/new-cuisine/new-cuisine.component.html
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div id="jumb" class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4" align="center">Faire la cuisine</h1>
         <table align="center">
