working on geoloc

--- a/pfirst/src/app/new-accompage/new-accompage.component.html
+++ b/pfirst/src/app/new-accompage/new-accompage.component.html
@@ -37,6 +37,16 @@
                 <label for ="local" ><h2>Ou shouaitez vous que l'on vous accompagne ?</h2></label>
                 <input type="text" id="local" class="form-control" formControlName="local">
               </div>
+              <div class="jumbotron" id="formulaire">
+                <div class="form-group">
+                  <label for ="city" ><h2>Ville</h2></label>
+                  <input type="text" id="city" class="form-control" formControlName="city">
+                  
+                    <label for ="adress" ><h2>Votre adresse</h2></label>
+                    <input type="text" id="adress" class="form-control" formControlName="adress">
+                  </div>
+                </div>
+      
 
               <div class="form group">
                 <label for ="description"> <h2>Veuillez indiquer un petit texte qui aidera a mieux coller a vos attentes.</h2></label>
