--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -98,7 +98,7 @@
           </div>
           <div class="jumbotron" id="formulaire">
           <div class="form-group">
-            <label for ="city" ><h2>Ville ou vous trouvez</h2></label>
+            <label for ="city" ><h2>Ville</h2></label>
             <input type="text" id="city" class="form-control" formControlName="city">
             
               <label for ="adress" ><h2>Votre adresse</h2></label>
