Acceptation d'un helper et affichage des assignees OK, mais pb avec ce qui est fait dans le back #36

--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -34,7 +34,7 @@
                       [index]="i"
                       [id]="service.idAnnounce"
                       [serviceDate]="service.content.datejour"
-                      [assignees]="service.assignees">
+                      [status]="service.status">
                     </app-service-activity>
                   </td>
                   <td width="5%">
@@ -82,7 +82,7 @@
                       [index]="i"
                       [id]="service.idAnnounce"
                       [serviceDate]="service.content.datejour"
-                      [assignees]="service.assignees">
+                      [status]="service.status">
                     </app-service-activity>
                   </td>
                   <td width="5%">
