--- a/pfirst/src/app/propose/propose.component.html
+++ b/pfirst/src/app/propose/propose.component.html
@@ -21,6 +21,7 @@
                       [serviceImage]="service.content.image"
                       [index]="i"
                       [id]="service.id"
+                      [status]="service.status"
                       [serviceDate]="service.content.datejour" >
             </app-service>
           </div>
@@ -35,6 +36,7 @@
             [serviceImage]="service.content.image"
             [index]="i"
             [id]="service.id"
+            [status]="service.status"
             [serviceDate]="service.content.datejour" >
           </app-service>
           </div>
@@ -48,6 +50,7 @@
             [serviceImage]="service.content.image"
             [index]="i"
             [id]="service.id"
+            [status]="service.status"
             [serviceDate]="service.content.datejour" >
           </app-service>
           </div>
@@ -59,6 +62,7 @@
             [serviceImage]="service.content.image"
             [index]="i"
             [id]="service.id"
+            [status]="service.status"
             [serviceDate]="service.content.datejour" >
           </app-service>
           </div>
@@ -70,6 +74,7 @@
             [serviceImage]="service.content.image"
             [index]="i"
             [id]="service.id"
+            [status]="service.status"
             [serviceDate]="service.content.datejour" >
           </app-service>
           </div>
