Création d'un service regroupant toutes les fonctions du suivi des annonces #36

--- a/pfirst/src/app/activity/activity.component.html
+++ b/pfirst/src/app/activity/activity.component.html
@@ -55,7 +55,7 @@
     <table>
       <tr>
         <td>
-          <h2  id="demandeTexte">Vos demandes en cours</h2>
+          <h2  id="demandeTexte">Vos propositions en cours</h2>
         </td>
         <td>
           <img  *ngIf="isCollapsedProposition" (click)="isCollapsedProposition = !isCollapsedProposition"
