--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -24,53 +24,56 @@
   </table>
 </div>
 
+<div id="iNeedExplainedContainer">
+  <!-- INEED C'EST QUOI ?-->
+  <table align="center" cellpadding="80" width="70%">
+    <tr>
+      <td valign="top">
+        <table>
+          <tr>
+            <td><img id="IneedCQ" src="../../assets/data/ACCUEIL/ineedCQ.png" alt=""></td>
+          </tr>
+          <tr>
+            <p id="textIn"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie.
+              Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris
+              que j'avais remarquée.</p>
+          </tr>
+        </table>
+      </td>
+      <td align="right">
+        <img id="pile" src="../../assets/data/ACCUEIL/pile.png" alt="">
+      </td>
+    </tr>
+  </table>
 
-<!-- INEED C'EST QUOI ?-->
-<table align="center" cellpadding="80">
-  <tr>
-    <td valign="top">
-      <table>
-        <tr>
-          <td><img id="IneedCQ" src="../../assets/data/ACCUEIL/ineedCQ.png" alt=""></td>
-        </tr>
-        <tr>
-          <p id="textIn"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
-        </tr>
-      </table>
-    </td>
-    <td align="right">
-      <img id="pile" src="../../assets/data/ACCUEIL/pile.png" alt="">
-    </td>
-  </tr>
-</table>
+  <!-- SEPARATE-->
+  <table align="center">
+    <tr>
+      <img id="sep" src="../../assets/data/ACCUEIL/separ.png" alt="">
+    </tr>
+  </table>
 
-<!-- SEPARATE-->
-<table align="center">
-  <tr>
-    <img id="sep" src="../../assets/data/ACCUEIL/separ.png" alt="">
-  </tr>
-</table>
-
-<!-- AIDER QUELQUUN ?-->
-<table align="center" cellpadding="80">
-  <tr>
-    <td align="right">
-      <img id="jetCourse" src="../../assets/data/ACCUEIL/jetonCourse.png" alt="">
-    </td>
-    <td valign="top">
-      <table>
-        <tr>
-          <td><img id="tuveux" src="../../assets/data/ACCUEIL/tuVeux.png" alt=""></td>
-        </tr>
-        <tr>
-          <p id="textTV"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie. Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris que j'avais remarquée.</p>
-        </tr>
-      </table>
-    </td>
-  </tr>
-</table>
-
-
+  <!-- AIDER QUELQUUN ?-->
+  <table align="center" cellpadding="80" width="70%">
+    <tr>
+      <td align="right">
+        <img id="jetCourse" src="../../assets/data/ACCUEIL/jetonCourse.png" alt="">
+      </td>
+      <td valign="top">
+        <table>
+          <tr>
+            <td><img id="tuveux" src="../../assets/data/ACCUEIL/tuVeux.png" alt=""></td>
+          </tr>
+          <tr>
+            <p id="textTV"> Autre absurdité, renouvelée du stoïcisme, et tous deux perpétuaient leur plaisanterie.
+              Sapristi, en voilà déjà un de mort. Chouette journée pour une petite gueuse ; et quant à ce que je compris
+              que j'avais remarquée.</p>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+</div>
 <!-- AIDER QLQ
 <img id="tuveux" src="../../assets/data/ACCUEIL/tuVeux.png" alt="">
 <img id="jetCourse" src="../../assets/data/ACCUEIL/jetonCourse.png" alt="">
