map begin working #9

--- a/pfirst/src/app/propose/propose.component.html
+++ b/pfirst/src/app/propose/propose.component.html
@@ -21,7 +21,9 @@
                       [serviceImage]="service.content.image"
                       [index]="i"
                       [id]="service.id"
-                      [serviceDate]="service.content.datejour" >
+                      [serviceDate]="service.content.datejour"
+                      [serviceLatitude]="service.content.latitude"
+                      [serviceLongitude]="service.content.longitude" >
             </app-service>
           </div>
 
